Add dev init scripts